<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:id="@+id/fragment_ui"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:text="@string/existingRoutes"
            android:id="@+id/existingRoutes"
            android:layout_weight="0.11" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:text="@string/startNewRoute"
            android:id="@+id/startNewRoute"
            android:layout_weight="0.09" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endNewRoute"
            android:id="@+id/endNewRoute"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.37" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:id="@+id/point"
            android:layout_weight="0.44" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next"
            android:id="@+id/Next"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/previous"
            android:id="@+id/Previous"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/ok"
            />
    </LinearLayout>
</LinearLayout>
